[tool.poetry]
name = "health-check-monitor"
version = "1.0.0"
description = "A simple health check monitor for detecting service availability and performance issues."
authors = ["Samy Alderson <samyal@me.com>"]

[tool.poetry.dependencies]
python = "^3.9"
poetry = "^1.2"
requests = "^2.28"
dnspython = "^2.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1"

[tool.poetry.scripts]
health-check-monitor = "src.main:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[project.urls]
homepage = "https://github.com/samyal/health-check-monitor"